[project]
name = "ming-uniaudio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "decord==0.6.0",
    "diffusers==0.33.0",
    "flash-attn<2.8.0",
    "grouped-gemm==0.1.4",
    "hyperpyyaml==1.2.2",
    "ninja>=1.13.0",
    "peft==0.13.2",
    "setuptools>=80.9.0",
    "soundfile==0.12.1",
    "tokenizers>=0.21.4",
    "torch==2.6.0",
    "torchao>=0.13.0",
    "torchaudio==2.6.0",
    "torchdiffeq>=0.2.5",
    "torchtune>=0.6.1",
    "torchvision==0.21.0",
    "transformers==4.52.4",
    "wheel>=0.45.1",
    "x-transformers>=2.8.2",
]
[tool.uv.extra-build-dependencies]
grouped-gemm = ["torch"]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
